<resources>
    <string name="app_name">MA2503</string>
    <string name="music">music</string>
    <string name="songName">歌曲名</string>
    <string name="lyExample">歌词1\n歌词2\n歌词3</string>
    <string name="changePlayMode">切换播放模式</string>
    <string name="showPlayList">展开播放列表</string>
    <string name="previousSong">上一曲</string>
    <string name="nextSong">下一曲</string>
    <string name="playPause">播放/暂停</string>
    <string name="_00_00">00:00</string>
    <string name="_03_30">03:30</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="image">image</string>
    <string name="check">check</string>
    <string name="images_info">授权信息</string>
    <string name="select">select</string>
    <string name="load">load</string>
    <string name="ImageUrl">图片网址：</string>
    <string name="image1">image 1</string>
    <string name="loadGallery">loadGallery</string>
    <string name="todo">TODO</string>
    <string name="_2048">2048</string>
    <string name="best">Best</string>
    <string name="_0">0</string>
    <string name="hello_game_2048">hello, game 2048!</string>
    <string name="score">score</string>
    <string name="_new">new</string>
    <string name="auto_run">auto run</string>
    <string name="undo">undo</string>
    <string name="compass">指南针</string>
    <string name="_game1">游戏1</string>
    <string name="location_latitude_longitude">纬度: %1$s\n经度: %2$s</string>
    <string name="settings">Settings</string>
    <string name="start_listening">Start Listening</string>
    <string name="stop_listening">Stop Listening</string>
    <string name="accessibility_service_description">qq 通知检测</string>
    <string name="music2">音乐</string>
    <string name="select_music_dir">选择歌曲文件夹</string>
    <string name="start_music_service">开启音乐播放服务</string>
    <string name="stop_music_service">关闭音乐播放服务</string>
    <string name="view">查看</string>
    <string name="close">关闭</string>
    <string name="notification_music_play">通知栏音乐播放</string>
    <string name="span" />
    <string name="jingdu_weidu_zhanwei">纬度:\n经度:</string>
    <string name="song_name">Song Name</string>
    <string name="_00_00_1">00:00</string>
</resources>