<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="300dp"
    android:background="@drawable/bg01">


    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextClock
            android:id="@+id/textClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:format24Hour="yyyy-MM-dd HH:mm:ss EEE" />

        <Button
            android:id="@+id/btn2image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/image" />
        <Button
            android:id="@+id/btn2game2048"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/_2048" />
        <Button
            android:id="@+id/btn2music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/music" />
<!--        <Button-->
<!--            android:id="@+id/btn2music2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="@string/music2" />-->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_open_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_start_listening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_listening"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_stop_listening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_listening"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_show_music"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/view"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btn_start_music"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/notification_music_play"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_stop_music"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/close"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
        <Button
            android:id="@+id/btn2compass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/compass" />
        <Button
            android:id="@+id/btn2Game1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/_game1" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#FFFFFF" />

        <AnalogClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="500dp" />


    </LinearLayout>
</ScrollView>