<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bg01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MusicActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll_image_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_images_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/images_info"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btnCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/check"
                tools:ignore="VisualLintButtonSize" />
            <Button
                android:id="@+id/btnSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_image_top2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:labelFor="@+id/etImageUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ImageUrl" />

            <EditText
                android:id="@+id/etImageUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="image url"
                android:inputType="textUri"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />
            <Button
                android:id="@+id/btnLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image1"
                android:src="@android:drawable/ic_menu_report_image"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnLoadGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loadGallery" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_gallery"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbars="vertical" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>